# auto_beamline_ops

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
autobl/: __init__.py  image_proc.py  message_logger.py  optimizer.py  segmentation.py  util.py
autobl/analysis/: __init__.py  segmentation.py
autobl/steering/: __init__.py  acquisition.py  analysis.py  components.py  configs.py  experiment.py  guide.py  guide_oed.py  io_util.py  measurement.py  model.py  optimization.py  simulation.py  util.py
autobl/tools/spectroscopy/: xanes.py
program/: bounding_box.py  image_proc.py  segmentation.py
test/: test_optimizer.py
tests/: generate_gold_data_for_all.sh  test_basic_gp.py  test_bubble_segmentation.py  test_capillary_segmentation.py  test_dense_reconstruction.py  test_flyscan_forward_simulation.py  test_segmentation_selector.py  test_xanes_experiment_manager.py  test_xanes_gp_fitres_2nd_order_deriv.py  test_xanes_normalizer.py  test_xanes_projected_space_model.py
tests/data/xanes/: Sample1_50C_XANES.csv  YBCO3data.csv
tests/gold_data/test_basic_gp/: candidates.npy
tests/gold_data/test_capillary_segmentation/: segment_mask.tiff
tests/gold_data/test_dense_reconstruction/: interpolated.tiff
tests/gold_data/test_xanes_experiment_manager/: candidates.npy
tests/gold_data/test_xanes_gp_fitres_2nd_order_deriv/: candidates.npy
tests/gold_data/test_xanes_gp_fitres_2nd_order_deriv_with_weight_func_ybco_data/: candidates.npy
tests/gold_data/test_xanes_normalizer/: normalized_data.npy
tests/gold_data/test_xanes_projected_space_model/: candidates.npy
workspace/: test_bubble_segmentation.ipynb  test_bubble_segmentation.py
workspace/saxs_beamline/: test_bubble_segmentation.ipynb  test_bubble_segmentation.py  test_segmentation_with_algorithm_selector.ipynb
workspace/spectroscopy/: spectrum_sampling.py
workspace/spectroscopy/XANES/: XANES_grid_transfer_LTO.py  XANES_grid_transfer_NMC111.py  XANES_grid_transfer_Pt.py  XANES_sampling.ipynb  (+16 more)
workspace/test/: botorch_notes.ipynb  test_botorch.py  test_optimizer.py
(+12 files in other folders)
